ad optimise image resize and viewing
