# backend/app/models/report_image.py
@@ -21,5 +21,6 @@ class ReportImage(Base):
         Integer, ForeignKey("reports.id", ondelete="CASCADE"), nullable=False, index=True
     )
     url = Column(String, nullable=False)
+    thumbnail_url = Column(String, nullable=True)
     image_type: Column[ImageType] = Column(Enum(ImageType), nullable=False)
     created_at = Column(DateTime, default=datetime.utcnow)
